# custom-courseware-api

./: .env.template  .gitignore  Dockerfile  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
custom_courseware_api/: __main__.py  auth.py  database.py
custom_courseware_api/schemas/: api_info.py  config.py  pagination.py  user.py
custom_courseware_api/schemas/errors/: form_error.py
src/: auth.py  config.py  database.py  main.py
src/models/: course.py
src/schemas/: config.py  schema_base.py
tests/: conftest.py
tests/user/: conftest.py  creation_test.py  delete_test.py  retrieval_test.py  update_test.py
